--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg nav-style">
       <div class="container-fluid">
         <h2 class="navbar-brand">My Notes</h2>
-        <button class = "btn btn-light card_btns"  id="navAddNote"><img src="./add-round-button.svg" alt="" class="add_btn"></button>
+        <button class = "btn btn-light card_btns"  id="navAddNote"><img src="./add-round-button.svg" alt="" class="add_btn" title="Add Note"></button>
       </div>
     </nav>
 
@@ -37,8 +37,8 @@
           <div class="card-body">
               <h5 class="card-title">Hi</h5>
               <p class="card-text">There</p>
-              <button class="btn card_btns"><img src="./delete.svg" alt="" class="delete_btn"></button>
-              <button class="btn card_btns"><img src="./edit.svg" alt="" class="edit_btn"></button>
+              <button class="btn card_btns"><img src="./delete.svg" alt="" class="delete_btn" title="Delete Note"></button>
+              <button class="btn card_btns"><img src="./edit.svg" alt="" class="edit_btn" title="Edit Note"></button>
           </div>
         </div>
       </div>
